# Proposal-Bot

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
src/proposal_bot/: __init__.py
src/proposal_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_proposal_bot.py
